# sacredvote-civic-news

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix
deploy/: install.sh  ratings.toml.example  uninstall.sh
deploy/caddy/: sacredvote-civic-news.caddy
deploy/systemd/: sacredvote-civic-news.service
scripts/: ci.sh
src/: dedup_rank.rs  fetcher.rs  main.rs  neutrality.rs  registry.rs
